@@ -1,3 +1,7 @@
+2006-12-07  David Daney  <ddaney@avtrex.com>
+
+	* gnu/testlet/java/net/HttpURLConnection/timeout.java: New test.
+
 2006-12-07  Mark Wielaard  <mark@klomp.org>
 
 	* gnu/testlet/java/net/URL/URLTest.java: Add test for jar base with
